--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
           <li>
             <button class="main-submenu-toggle">Каталог товаров</button>
             <ul class="main-submenu">
-              <li><a href="catalog-item.html">Виртуальная реальность</a></li>
-              <li><a href="catalog-item.html">Моноподы для селфи</a></li>
-              <li><a href="catalog-item.html"> Экшн-камеры</a></li>
-              <li><a href="catalog-item.html">Фитнес-браслеты</a></li>
-              <li><a href="catalog-item.html">Умные часы</a></li>
-              <li><a href="catalog-item.html">Квадрокоптеры</a></li>
+              <li><a href="catalog.html">Виртуальная реальность</a></li>
+              <li><a href="catalog.html">Моноподы для селфи</a></li>
+              <li><a href="catalog.html"> Экшн-камеры</a></li>
+              <li><a href="catalog.html">Фитнес-браслеты</a></li>
+              <li><a href="catalog.html">Умные часы</a></li>
+              <li><a href="catalog.html">Квадрокоптеры</a></li>
             </ul>
           </li>
           <li><a href="delivery.html">Доставка</a></li>
@@ -51,8 +51,9 @@
     <section class="contacts">
       <h3>Контакты</h3>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <iframe class="small-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1891.2727278048312!2d37.527818508990045!3d55.68698863749251!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1542623689454" width="560" height="220" frameborder="0" style="border:0" allowfullscreen></iframe><br />
+      <iframe class="small-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1891.2727278048312!2d37.527818508990045!3d55.68698863749251!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1542623689454" width="560" height="220" frameborder="0" style="border:0" allowfullscreen></iframe>
       <iframe class="map-popup" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1891.2727278048312!2d37.527818508990045!3d55.68698863749251!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1542623689454" width="960" height="560" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <br />
       <button>Напишите нам</button>
       <form action="mail.php" class="writeus-modal">
         <label for="writeus-name">Ваше имя:</label>
