--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,71 @@
         <li><a href="catalogs.html">Каталог</a></li>
         <li><a class="active">Моноподы для селфи</a></li>
       </ul>
-
+      <aside class="filter">
+        <fieldset class="color">
+          <legend>Цвет</legend>
+          <label for="color-black">
+            <input type="checkbox" name="color-value" id="color-black" checked>
+            <span>Чёрный</span>
+          </label>
+          <label for="color-white">
+            <input type="checkbox" name="color-value" id="color-white">
+            <span>Белый</span>
+          </label>
+          <label for="color-blue">
+            <input type="checkbox" name="color-value" id="color-blue" checked>
+            <span>Синий</span>
+          </label>
+          <label for="color-red">
+            <input type="checkbox" name="color-value" id="color-red" checked>
+            <span>Красный</span>
+          </label>
+          <label for="color-pink">
+            <input type="checkbox" name="color-value" id="color-pink">
+            <span>Розовый</span>
+          </label>
+        </fieldset>
+        <fieldset class="bluetooth">
+          <legend>Bluetooth</legend>
+          <label for="bluetooth-yes">
+            <input type="radio" name="bluetooth-value" id="bluetooth-yes" checked>
+            <span>Есть</span>
+          </label>
+          <label for="bluetooth-no">
+            <input type="radio" name="bluetooth-value" id="bluetooth-no">
+            <span>Нет</span>
+        </fieldset>
+      </aside>
+      <article>
+        <div class="item-card">
+          <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
+          <dl>
+            <dt>Любительская селфи-палка</dt>
+            <dd>500 руб.</dd>
+          </dl>
+        </div>
+        <div class="item-card">
+          <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
+          <dl>
+            <dt>Профессиональная селфи-палка</dt>
+            <dd>1 500 руб.</dd>
+          </dl>
+        </div>
+        <div class="item-card">
+          <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
+          <dl>
+            <dt>Непотопляемая селфи-палка</dt>
+            <dd>2 500 руб.</dd>
+          </dl>
+        </div>
+        <div class="item-card">
+          <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
+          <dl>
+            <dt>Селфи-палка "Следуй за мной"</dt>
+            <dd>4900 руб.</dd>
+          </dl>
+        </div>
+      </article>
     </main>
 
     <footer class="main-footer">
