--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,10 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <h2 class="main-navigation__logo">DEVICE</h2>
+        <a class="header-logo logo" href="index.html">
+          <img src="img/logo.svg" alt="Device" height="36" width="164">
+          <em>Device</em>
+        </a>
         <input type="search" placeholder="Поиск по сайту">
         <ul class="main-user-navigation">
           <li>
@@ -19,7 +22,7 @@
         </ul>
         <ul class="main-site-navigation">
           <li>
-            <button class="main-submenu-toggle">Каталог товаров</button>
+            <a class="main-submenu-toggle">Каталог товаров</a>
             <ul class="main-submenu">
               <li><a href="catalog.html">Виртуальная реальность</a></li>
               <li><a href="catalog.html">Моноподы для селфи</a></li>
@@ -43,76 +46,81 @@
         <li><a href="catalogs.html">Каталог</a></li>
         <li><a class="active">Моноподы для селфи</a></li>
       </ul>
-      <aside class="filter">
+      <form class="filter" method="post" action="https://echo.htmlacademy.ru">
         <fieldset class="color">
           <legend>Цвет</legend>
           <label for="color-black">
-            <input type="checkbox" name="color-value" id="color-black" checked>
+            <input type="checkbox" name="color-value" id="color-black" value="black" checked>
             <span>Чёрный</span>
           </label>
           <label for="color-white">
-            <input type="checkbox" name="color-value" id="color-white">
+            <input type="checkbox" name="color-value" id="color-white" value="white">
             <span>Белый</span>
           </label>
           <label for="color-blue">
-            <input type="checkbox" name="color-value" id="color-blue" checked>
+            <input type="checkbox" name="color-value" id="color-blue" value="blue" checked>
             <span>Синий</span>
           </label>
           <label for="color-red">
-            <input type="checkbox" name="color-value" id="color-red" checked>
+            <input type="checkbox" name="color-value" id="color-red" value="red" checked>
             <span>Красный</span>
           </label>
           <label for="color-pink">
-            <input type="checkbox" name="color-value" id="color-pink">
+            <input type="checkbox" name="color-value" id="color-pink" value="pink">
             <span>Розовый</span>
           </label>
         </fieldset>
         <fieldset class="bluetooth">
           <legend>Bluetooth</legend>
           <label for="bluetooth-yes">
-            <input type="radio" name="bluetooth-value" id="bluetooth-yes" checked>
+            <input type="radio" name="bluetooth-value" id="bluetooth-yes" checked value="yes">
             <span>Есть</span>
           </label>
           <label for="bluetooth-no">
-            <input type="radio" name="bluetooth-value" id="bluetooth-no">
+            <input type="radio" name="bluetooth-value" id="bluetooth-no" value="no">
             <span>Нет</span>
+          </label>
         </fieldset>
-      </aside>
-      <article>
-        <div class="item-card">
+        <button type="submit">Показать</button>
+      </form>
+      <ul class="item-list">
+        <li class="item-card">
           <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
           <dl>
             <dt>Любительская селфи-палка</dt>
             <dd>500 руб.</dd>
           </dl>
-        </div>
-        <div class="item-card">
+        </li>
+        <li class="item-card">
           <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
           <dl>
             <dt>Профессиональная селфи-палка</dt>
             <dd>1 500 руб.</dd>
           </dl>
-        </div>
-        <div class="item-card">
+        </li>
+        <li class="item-card">
           <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
           <dl>
             <dt>Непотопляемая селфи-палка</dt>
             <dd>2 500 руб.</dd>
           </dl>
-        </div>
-        <div class="item-card">
+        </li>
+        <li class="item-card">
           <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
           <dl>
             <dt>Селфи-палка "Следуй за мной"</dt>
             <dd>4900 руб.</dd>
           </dl>
-        </div>
-      </article>
+        </li>
+      </ul>
     </main>
 
     <footer class="main-footer">
       <nav class="footer-navigation">
-        <h2 class="main-footer__logo">DEVICE</h2>
+        <a class="header-logo logo" href="index.html">
+          <img src="img/logo.svg" alt="Device" height="36" width="164">
+          <em>Device</em>
+        </a>
         <ul class="main-footer__user-navigation">
           <li>
             <a href="user.html">Валентин Петухов</a>
@@ -137,6 +145,6 @@
       <a href="https://htmlacademy.ru" class="main-footer__copyrigth">HTML Academy</a>
     </footer>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
   </body>
 </html>
