--- a/catalog.html
+++ b/catalog.html
@@ -76,6 +76,7 @@
           <label for="bluetooth-no">
             <input type="radio" name="bluetooth-value" id="bluetooth-no">
             <span>Нет</span>
+          </label>
         </fieldset>
       </aside>
       <article>
