--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="header-logo logo" href="index.html">
-          <img src="img/logo.svg" alt="Device" height="36" width="164">
+          <img src="img/logo.png" alt="Device" height="36" width="164">
           <em>Device</em>
         </a>
         <input type="search" placeholder="Поиск по сайту">
@@ -85,28 +85,28 @@
       </form>
       <ul class="item-list">
         <li class="item-card">
-          <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
+          <img src="img/item-1.jpg" alt="Карточка товара" height="380" width="360">
           <dl>
             <dt>Любительская селфи-палка</dt>
             <dd>500 руб.</dd>
           </dl>
         </li>
         <li class="item-card">
-          <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
+          <img src="img/item-2.jpg" alt="Карточка товара" height="380" width="360">
           <dl>
             <dt>Профессиональная селфи-палка</dt>
             <dd>1 500 руб.</dd>
           </dl>
         </li>
         <li class="item-card">
-          <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
+          <img src="img/item-3.jpg" alt="Карточка товара" height="380" width="360">
           <dl>
             <dt>Непотопляемая селфи-палка</dt>
             <dd>2 500 руб.</dd>
           </dl>
         </li>
         <li class="item-card">
-          <img src="http://placehold.it/380x360" alt="Карточка товара" height="380" width="360">
+          <img src="img/item-4.jpg" alt="Карточка товара" height="380" width="360">
           <dl>
             <dt>Селфи-палка "Следуй за мной"</dt>
             <dd>4900 руб.</dd>
@@ -118,7 +118,7 @@
     <footer class="main-footer">
       <nav class="footer-navigation">
         <a class="header-logo logo" href="index.html">
-          <img src="img/logo.svg" alt="Device" height="36" width="164">
+          <img src="img/footer-logo.png" alt="Device" height="36" width="164">
           <em>Device</em>
         </a>
         <ul class="main-footer__user-navigation">
