--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="header-logo logo">
-          <img src="img/logo.svg" alt="Device" height="36" width="164">
+          <img src="img/logo.png" alt="Device" height="36" width="164">
           <em>Device</em>
         </a>
         <input type="search" placeholder="Поиск по сайту">
@@ -52,7 +52,10 @@
     <section class="contacts">
       <h3>Контакты</h3>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <img src="http://placehold.it/560x220" alt="Карта (уменьшенная)" width="560" height="220" class="map-preview">
+      <a href="large-map.html">
+        <img src="img/map.jpg" alt="Карта (уменьшенная)" width="560" height="220" class="map-preview">
+        <span>Увеличить карту</span>
+      </a>
       <iframe class="map-popup" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1891.2727278048312!2d37.527818508990045!3d55.68698863749251!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1542623689454" width="960" height="560" allowfullscreen></iframe>
       <br />
       <button>Напишите нам</button>
@@ -77,7 +80,7 @@
     <footer class="main-footer">
       <nav class="footer-navigation">
         <a class="header-logo logo">
-          <img src="img/logo.svg" alt="Device" height="36" width="164">
+          <img src="img/footer-logo.png" alt="Device" height="36" width="164">
           <em>Device</em>
         </a>
         <ul class="main-footer__user-navigation">
