Add class "visually-hidden"
Добавил класс visually-hidden
Изменил немного форму на index.html
Поменял карту на изображение

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
       <nav class="main-navigation">
         <a class="header-logo logo" href="index.html">
           <img src="img/logo.png" alt="Device" height="36" width="164">
-          <em>Device</em>
+          <em class="visually-hidden">Device</em>
         </a>
         <input type="search" placeholder="Поиск по сайту">
         <ul class="main-user-navigation">
@@ -119,7 +119,7 @@
       <nav class="footer-navigation">
         <a class="header-logo logo" href="index.html">
           <img src="img/footer-logo.png" alt="Device" height="36" width="164">
-          <em>Device</em>
+          <em class="visually-hidden">Device</em>
         </a>
         <ul class="main-footer__user-navigation">
           <li>
@@ -138,11 +138,11 @@
         </ul>
       </nav>
       <ul class="main-footer__social">
-        <li><a href="https://facebook.com">Facebook</a></li>
-        <li><a href="https://instagram.com">Instagram</a></li>
-        <li><a href="https://twitter.com">Twitter</a></li>
+        <li><a href="https://facebook.com" class="visually-hidden">Facebook</a></li>
+        <li><a href="https://instagram.com" class="visually-hidden">Instagram</a></li>
+        <li><a href="https://twitter.com" class="visually-hidden">Twitter</a></li>
       </ul>
-      <a href="https://htmlacademy.ru" class="main-footer__copyrigth">HTML Academy</a>
+      <a href="https://htmlacademy.ru" class="main-footer__copyrigth visually-hidden">HTML Academy</a>
     </footer>
 
     <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
