Подключил logo.svg

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="header-logo logo" href="index.html">
-          <img src="img/logo.png" alt="Device Logo" height="36" width="164">
+          <img src="img/logo.svg" alt="Device Logo" height="36" width="164">
         </a>
         <input type="search" placeholder="Поиск по сайту">
         <ul class="main-user-navigation">
@@ -117,7 +117,7 @@
     <footer class="main-footer">
       <nav class="footer-navigation">
         <a class="header-logo logo" href="index.html">
-          <img src="img/footer-logo.png" alt="Device Logo" height="36" width="164">
+          <img src="img/logo.svg" alt="Device Logo" height="36" width="164">
         </a>
         <ul class="main-footer__user-navigation">
           <li>
