--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="">
   </head>
   <body>
     <header class="main-header">
@@ -10,7 +12,7 @@
         <a class="header-logo logo">
           <img src="img/logo.svg" alt="Device Logo" height="36" width="164">
         </a>
-        <input type="search" placeholder="Поиск по сайту">
+        <input type="search" placeholder="Поиск по сайту" class="site-search">
         <ul class="main-user-navigation">
           <li><a href="#">Войти</a></li>
           <li><a href="#">Сравнить</a></li>
@@ -61,7 +63,7 @@
     <footer class="main-footer">
       <nav class="footer-navigation">
         <a class="header-logo logo">
-          <img src="img/logo.svg" alt="Device Logo" height="36" width="164">
+          <img src="img/logo-footer.svg" alt="Device Logo" height="36" width="163">
         </a>
         <ul class="main-footer__user-navigation">
           <li><a href="#">Войти</a></li>
