--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML Academy: Девайс/Каталог</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
@@ -10,7 +11,7 @@
         <a class="header-logo logo" href="index.html">
           <img src="img/logo.svg" alt="Device Logo" height="36" width="164">
         </a>
-        <input type="search" placeholder="Поиск по сайту">
+        <input type="search" placeholder="Поиск по сайту" class="site-search">
         <ul class="main-user-navigation">
           <li>
             <a href="#">Валентин Петухов</a>
@@ -117,7 +118,7 @@
     <footer class="main-footer">
       <nav class="footer-navigation">
         <a class="header-logo logo" href="index.html">
-          <img src="img/logo.svg" alt="Device Logo" height="36" width="164">
+          <img src="img/logo-footer.svg" alt="Device Logo" height="36" width="164">
         </a>
         <ul class="main-footer__user-navigation">
           <li>
@@ -151,10 +152,13 @@
             <span class="visually-hidden">Twitter</span>
           </a>
         </li>
+        <li>
+          <a href="https://htmlacademy.ru" class="main-footer__copyrigth">
+            <span class="visually-hidden">HTML Academy</span>
+          </a>
+        </li>
       </ul>
-      <a href="https://htmlacademy.ru" class="main-footer__copyrigth">
-        <span class="visually-hidden">HTML Academy</span>
-      </a>
+
     </footer>
 
     <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
